--- a/6-04/docker-compose.yml
+++ b/6-04/docker-compose.yml
@@ -7,6 +7,11 @@ services:
   prometheus:
       image: prom/prometheus
       container_name: prokutindv-netology-prometheus
+      volumes:
+        - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+        - ./prometheus/alert.rules:/etc/prometheus/alert.rules 
+        - ./prometheus:/etc/prometheus
+        - prometheus_data:/prometheus
       command:
         - '--config.file=/etc/prometheus/prometheus.yml'
         - '--storage.tsdb.path=/prometheus'
@@ -14,13 +19,25 @@ services:
         - '--web.console.templates=/usr/share/prometheus/consoles'
       ports:
         - 9090:9090
-      volumes:
-        - ./prometheus:/etc/prometheus
-        - prometheus_data:/prometheus
       networks:
         - prokutindv-my-netology-hw
       restart: always
+      links:
+      - pushgateway:pushgateway
+      depends_on:
+      - pushgateway
 
+  pushgateway:
+    image: prom/pushgateway
+    container_name: prokutindv-netology-pushgateway
+    expose:
+      - 9091
+    ports:
+      - "9091:9091"
+    networks:
+        - prokutindv-my-netology-hw
+    restart: always
+    
 
 networks:
   prokutindv-my-netology-hw:  
