--- a/6-04/prometheus/prometheus.yml
+++ b/6-04/prometheus/prometheus.yml
@@ -51,3 +51,8 @@ scrape_configs:
   
     static_configs:
       - targets: ['node-exporter:9100']
+    
+  - job_name: "pushgateway"
+    honor_labels: true
+    static_configs:
+      - targets: ["pushgateway:9091"]
