--- a/6-04/docker-compose.yml
+++ b/6-04/docker-compose.yml
@@ -2,14 +2,13 @@ version: '3.8'
 
 volumes:
     prometheus_data: {}
+    grafana_data: {}
 
 services:
   prometheus:
       image: prom/prometheus
       container_name: prokutindv-netology-prometheus
       volumes:
-        - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-        - ./prometheus/alert.rules:/etc/prometheus/alert.rules 
         - ./prometheus:/etc/prometheus
         - prometheus_data:/prometheus
       command:
@@ -37,7 +36,7 @@ services:
     networks:
         - prokutindv-my-netology-hw
     restart: always
-    
+
 
 networks:
   prokutindv-my-netology-hw:  
