--- a/6-04/grafana/grafana.ini
+++ b/6-04/grafana/grafana.ini
@@ -1,4 +1,3 @@
 [security]
-
-GF_SECURITY_ADMIN_USER=prokutindv
-GF_SECURITY_ADMIN_PASSWORD=netology
+admin_user = prokutindv
+admin_password = netology
