--- a/6-04/docker-compose.yml
+++ b/6-04/docker-compose.yml
@@ -51,7 +51,9 @@ services:
     restart: unless-stopped
 
 networks:
-  prokutindv-my-netology-hw:  
+  prokutindv-my-netology-hw:
+    external: true
+    name: prokutindv-my-netology-hw
     driver: bridge
     ipam:
       config:
